@@ -2,6 +2,7 @@
 package com.is.mindart.gestioneDisegno.controller;
 
 import com.is.mindart.gestioneDisegno.service.DisegnoDTO;
+import com.is.mindart.gestioneDisegno.service.DisegnoDTOResponse;
 import com.is.mindart.gestioneDisegno.service.DisegnoService;
 import com.is.mindart.gestioneSessione.model.SessioneRepository;
 import lombok.AllArgsConstructor;
@@ -9,8 +10,11 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
+
+import java.util.List;
 
 /**
  * Controller per gestire le operazioni relative ai Disegni.
@@ -57,10 +61,42 @@ public class DisegnoController {
          String principal = (String) authentication.getPrincipal();
         Long sessioneId = sessioneRepository
                 .findByTerminataFalseAndTerapeuta_EmailOrderByDataAsc(principal)
-                .get(0).getId();
+                .getFirst().getId();
             DisegnoDTO disegnoResponseDTO = disegnoService
                     .getDisegnoBySessioneId(sessioneId);
         return ResponseEntity.ok(disegnoResponseDTO);
     }
 
+
+    /**
+     * Restituisce i disegni di un bambino.
+     * @param id id del bambino
+     * @return 200 OK
+     */
+    @GetMapping("terapeuta/bambino/{id}/disegni/")
+    public ResponseEntity<List<DisegnoDTOResponse>> getDisegniByBambinoId(
+            @PathVariable final Long id) {
+        Authentication authentication = SecurityContextHolder
+                .getContext().getAuthentication();
+        String principal = (String) authentication.getPrincipal();
+
+        List<DisegnoDTOResponse> disegnoResponseDTO = disegnoService
+                .getDisegniByBambinoId(id);
+        return ResponseEntity.ok(disegnoResponseDTO);
+    }
+
+    /**
+     * Restituisce i disegni di un bambino.
+     * @param id id del bambino
+     * @return 200 OK
+     */
+    @GetMapping("terapeuta/disegno/{id}")
+    public ResponseEntity<DisegnoDTO> getDisegnoById(
+            @PathVariable final Long id) {
+        Authentication authentication = SecurityContextHolder
+                .getContext().getAuthentication();
+        String principal = (String) authentication.getPrincipal();
+        DisegnoDTO disegnoResponseDTO = disegnoService.getDisegnoById(id);
+        return ResponseEntity.ok(disegnoResponseDTO);
+    }
 }
